[BUGFIX] Remove scrollbars in print

--- a/Resources/Public/Css/backend.css
+++ b/Resources/Public/Css/backend.css
@@ -65,7 +65,7 @@
 
 @media print {
 
-	html, body {
+	html, body, .module-body{
 		overflow: visible;
 	}
 	.nav{
